--- a/themes/melody/layout/includes/sidebar.pug
+++ b/themes/melody/layout/includes/sidebar.pug
@@ -64,3 +64,6 @@
         .author-info-links__title.text-center= theme.links_title
         each url, name in theme.links
           a.author-info-links__name.text-center(href=url)= name
+
+    //访客
+    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=gDvLU6nrnC-GYnDvk0ic6-0TUmRzpNIkuZ0Uv1PVuKY&cl=ffffff&w=a"></script>
